--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -4,9 +4,10 @@
         <title>Kuontalo-opus!</title>
     </head>
     <body>
-        <h2 th:inline="text">Welcome [[${userName}]]!
-            <a href="/login">Logout</a>
-        </h2>
+        <h2 th:inline="text">Welcome [[${userName}]]!</h2>        
+        <form action="#" th:action="@{/logout}" method="POST">
+            <input type="submit" value="Logout" />
+        </form>
         <form action="#" th:action="@{/post}" method="POST">
             <input type="text" name="message" placeholder="Whatcha thinking?" />
             <input type="submit" />
