Fix for vulnerability nr 3: Stored XSS vulnerability in the posts feature OWASP Top 10 type: A3 - Cross-Site Scripting (XSS)

--- a/src/main/resources/templates/mainpage.html
+++ b/src/main/resources/templates/mainpage.html
@@ -15,7 +15,7 @@
         <ul>       
         <li th:each="post : ${posts}">
             <p th:inline="text">[[${post.owner.name}]]:</p>
-            &quot;<span th:utext="${post.message}" />&quot;
+            &quot;<span th:text="${post.message}" />&quot;
             <hr />
         </li>
 
